@@ -1,6 +1,7 @@
 4.8.4:
   * When doing the full matrix testing with python >=2.6, we
     activate the deprecation warnings (py3k).
+  * Split dependencies in the Replication testsuite.
   * Patches ported from Python:
     * Memory leaks: #7808 - http://bugs.python.org/issue7808 - Florent Xicluna
     * 
